build_err.txt
[ 48%] Built target glfw
[ 51%] Building CXX object src/CMakeFiles/RacingGame.dir/main.cpp.o
/home/howard_yu/Codes/CG/Final/src/main.cpp: In function ‘void resizeCallback(GLFWwindow*, int, int)’:
/home/howard_yu/Codes/CG/Final/src/main.cpp:551:33: warning: unused parameter ‘window’ [-Wunused-parameter]
  551 | void resizeCallback(GLFWwindow* window, int width, int height) {
      |                     ~~~~~~~~~~~~^~~~~~
/home/howard_yu/Codes/CG/Final/src/main.cpp: In function ‘void buildPenaltyGrid()’:
/home/howard_yu/Codes/CG/Final/src/main.cpp:640:7: warning: unused variable ‘globalIdx’ [-Wunused-variable]
  640 |   int globalIdx = 0;  // Usage: modelIdx << 24 | triIdx? No, just keep simple list or struct.
      |       ^~~~~~~~~
/home/howard_yu/Codes/CG/Final/src/main.cpp: At global scope:
/home/howard_yu/Codes/CG/Final/src/main.cpp:1015:62: error: ‘x’ was not declared in this scope
 1015 | const std::vector<int>& candidates = trackGrid.getCandidates(x, z);
      |                                                              ^
/home/howard_yu/Codes/CG/Final/src/main.cpp:1015:65: error: ‘z’ was not declared in this scope
 1015 | const std::vector<int>& candidates = trackGrid.getCandidates(x, z);
      |                                                                 ^
/home/howard_yu/Codes/CG/Final/src/main.cpp:1016:1: error: expected unqualified-id before ‘for’
 1016 | for (int i : candidates) {
      | ^~~
/home/howard_yu/Codes/CG/Final/src/main.cpp:1041:1: error: expected unqualified-id before ‘if’
 1041 | if (foundAny) return bestHeight;
      | ^~
/home/howard_yu/Codes/CG/Final/src/main.cpp:1042:1: error: expected unqualified-id before ‘return’
 1042 | return -10000.0f;
      | ^~~~~~
/home/howard_yu/Codes/CG/Final/src/main.cpp:1043:1: error: expected declaration before ‘}’ token
 1043 | }
      | ^
/home/howard_yu/Codes/CG/Final/src/main.cpp: In function ‘void renderLapTimer(int, float, float, float, int, float, int, float, int)’:
/home/howard_yu/Codes/CG/Final/src/main.cpp:1046:67: warning: unused parameter ‘s1’ [-Wunused-parameter]
 1046 | void renderLapTimer(int lap, float curTime, float bestTime, float s1, int s1St, float s2, int s2St, float s3,
      |                                                             ~~~~~~^~
/home/howard_yu/Codes/CG/Final/src/main.cpp:1046:87: warning: unused parameter ‘s2’ [-Wunused-parameter]
 1046 | void renderLapTimer(int lap, float curTime, float bestTime, float s1, int s1St, float s2, int s2St, float s3,
      |                                                                                 ~~~~~~^~
/home/howard_yu/Codes/CG/Final/src/main.cpp:1046:107: warning: unused parameter ‘s3’ [-Wunused-parameter]
 1046 | void renderLapTimer(int lap, float curTime, float bestTime, float s1, int s1St, float s2, int s2St, float s3,
      |                                                                                                     ~~~~~~^~
make[2]: *** [src/CMakeFiles/RacingGame.dir/build.make:107: src/CMakeFiles/RacingGame.dir/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:237: src/CMakeFiles/RacingGame.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
